# shorty

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-01-01-000001_create_urls/: up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
