[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
